fix extra white space on width on screen sizing

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+}
 
 /* My css component classes */
 .btn {
